<resources>
    <string name="app_name">QUANLYCTEC</string>
    <string name="title_activity_stu_nav_drw">stu_NavDrw</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_result">Kết quả học tập</string>
    <string name="title_info">Thông tin cá nhân</string>
    <string name="title_logout">Đăng xuất</string>
    <string name="title_change_pw">Đổi mật khẩu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>